--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.3",
+    "nanostores": "^0.11.3",
     "tailwindcss": "^3.4.16"
   }
 }
